Creates two routes: /login & /languages

--- a/configuration/production-db.ini
+++ b/configuration/production-db.ini
@@ -1,6 +1,6 @@
 driver = mysql
 host = mysql.hostinger.com.br
-dbName = u989271099_sg
-userName = u989271099_sg
-pass = Si3859OSrf0h
+dbName = u989271099_ch
+userName = u989271099_mario
+pass = 8RtrJ6eg0Z8K
 port = 3306
